examples/test/testpolicy8991.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8991
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key21: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value4
      podSelector:
        matchLabels:
          key7: value7
          key30: value29
          key14: value28
